[package]
name = "consensus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
num-traits = { version = "0.2.15", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
smol = "1.2.5"
